@@ -372,7 +372,7 @@ std::vector<Complex> mueller_multiple
 
 std::vector<Complex> mueller
   (ComplexFunction& f,const std::vector<Complex>& z0,Real eps,int maxiter,
-   ComplexFunction* transform)
+   ComplexFunction* transform, int verbosity)
 {
   vector<Complex> allroots;
   
@@ -389,21 +389,24 @@ std::vector<Complex> mueller
     // Find zero.
 
     bool error = false;
-    
+    bool verbose = verbosity == 2;
     Complex new_root = mueller(f, z0[i]+0.001, z0[i]+.001*I, eps,
-                               &deflate, maxiter, &error, true); 
+                               &deflate, maxiter, &error, verbose);
 
     if (error)
       py_error("Mueller solver failed to converge.");
 
-    std::ostringstream s;
-    if (!transform)
-      s << i << " " << z0[i] << " --> " << new_root;
-    else
-      s << i << " " << (*transform)(z0[i]) << " --> "
-                    << (*transform)(new_root);
-
-    py_print(s.str());
+    if (verbosity > 0)
+    {
+      std::ostringstream s;
+      if (!transform)
+        s << i << " " << z0[i] << " --> " << new_root;
+      else
+        s << i << " " << (*transform)(z0[i]) << " --> "
+          << (*transform)(new_root);
+    
+      py_print(s.str());
+    }
 
     if (!error)
       allroots.push_back(new_root);
