@@ -1,3 +1,8 @@
+2003-02-17  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* mueller.h: Add verbosity to refining solver.
+	* mueller.cpp: Ditto.
+
 2003-01-22  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* mueller.h: Improve output from solver.
